--- a/landingPage.html
+++ b/landingPage.html
@@ -9,6 +9,7 @@
     <h1>
         Wat maakt een goede landingpage?
     </h1>
-    <p>Bart de Boer</p>
+    <p>Pagina gemaakt door Bart de Boer</p>
+    <img src="logoMA.jpg" alt="Logo Mediacollege Amsterdam">
 </body>
 </html>
