Fix voor de links bovenaan

--- a/Les5Menu/index.html
+++ b/Les5Menu/index.html
@@ -8,10 +8,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="voor">Voorgerecht</a></li>
-            <li><a href="hoofd">Hoofdgerecht</a></li>
-            <li><a href="bij">Bijgerecht</a></li>
-            <li><a href="na">Nagerecht</a></li>
+            <li><a href="#voor">Voorgerecht</a></li>
+            <li><a href="#hoofd">Hoofdgerecht</a></li>
+            <li><a href="#bij">Bijgerecht</a></li>
+            <li><a href="#na">Nagerecht</a></li>
         </ul>
     </nav>
     <header class="header">
