--- a/Les5Menu/index.html
+++ b/Les5Menu/index.html
@@ -66,7 +66,7 @@ Bestrijk de dichtgevouwen randen met geklutst ei, strooi de hazelnoten erover, d
             </p>
         </section>
         
-        <section= id="bij">
+        <section id="bij">
             <header>
                 <h2>Geel-ro­de stoof­pe­ren</h2>
                 <h4>Bijgerecht</h4>
