laatste opdracht afgemaakt

--- a/landingPage.html
+++ b/landingPage.html
@@ -9,7 +9,22 @@
     <h1>
         Wat maakt een goede landingpage?
     </h1>
-    <p>Pagina gemaakt door Bart de Boer</p>
+    <dl>
+        <dt><strong>Gebruiksvriendelijkheid</strong></dt>
+        <dd>- De pagina moet makkelijk te gebruiken zijn voor de mensen die de website bezoeken.</dd>
+        <dt><strong>Belangrijke elementen zichtbaar maken</strong></dt>
+        <dd>- Zorg ervoor dat de belangrijkste dingen in 1 oogopslag te zien zijn.</dd>
+        <dt><strong>Geen extra links</strong></dt>
+        <dd>- Laat geen extra links zien, waardoor de aandacht bij de hoofdpagina blijft.</dd>
+        <dt><strong>Keep it simple, stupid</strong></dt>
+        <dd>- Hou de pagina simpel. Geen frictie, to the point.</dd>
+        <dt><strong>Hou de informatie belangrijk</strong></dt>
+        <dd>- Zet alleen de belangrijke informatie voorop.</dd>
+        <dt><strong>Kort maar krachtig</strong></dt>
+        <dd>- Hou het kort, maar zet goede dingen erin.</dd>
+        <dt><strong>Toegankelijkheid</strong></dt>
+        <dd>- Zorg ervoor dat gebruikers makkelijk op knoppen kunnen klikken, op alle apparaten.</dd>
+    </dl>>
     <img src="logoMA.jpg" alt="Logo Mediacollege Amsterdam">
 </body>
 </html>
